--- a/doc/Doxyfile.in
+++ b/doc/Doxyfile.in
@@ -2020,6 +2020,8 @@ INCLUDE_FILE_PATTERNS  =
 # This tag requires that the tag ENABLE_PREPROCESSING is set to YES.
 
 PREDEFINED             = "G_GNUC_PRINTF(x,y)=" \
+                         G_GNUC_DEPRECATED= \
+                         G_GNUC_DEPRECATED_FOR(x)= \
                          HAVE_PLUGINS \
                          GEANY_FUNCTIONS_H
 
