--- a/doc/Doxyfile.in
+++ b/doc/Doxyfile.in
@@ -2035,7 +2035,10 @@ INCLUDE_FILE_PATTERNS  =
 # This tag requires that the tag ENABLE_PREPROCESSING is set to YES.
 
 PREDEFINED             = "G_GNUC_PRINTF(x,y)=" \
+                         G_BEGIN_DECLS= \
+                         G_END_DECLS= \
                          HAVE_PLUGINS \
+                         GEANY_API_SYMBOL= \
                          GEANY_FUNCTIONS_H
 
 # If the MACRO_EXPANSION and EXPAND_ONLY_PREDEF tags are set to YES then this
