doc: Generate geany-sciwrappers-gtkdoc.h along geany-gtkdoc.h
geany-sciwrappers-gtkdoc.h contains all scintilla_object_* methods. It is
intended that they are going to be exposed through a separate .gir file,
therefore a separate header makes things easier.

This is useful when you want scintlla-related stuff in a separate .gir file or
oarse it specially otherwise.

gen-api-gtkdoc.py: Add switch to write out scintilla_object methods

--- a/.gitignore
+++ b/.gitignore
@@ -112,6 +112,7 @@ Makefile.in
 /doc/*.toc
 /doc/reference
 /doc/geany-gtkdoc.h
+/doc/geany-sciwrappers-gtkdoc.h
 /doc/xml/
 
 #-----------------------------------------------------------------------
