--- a/doc/Doxyfile.in
+++ b/doc/Doxyfile.in
@@ -850,7 +850,8 @@ RECURSIVE              = NO
 # Note that relative paths are relative to the directory from which doxygen is
 # run.
 
-EXCLUDE                = @top_srcdir@/doc/geany-gtkdoc.h
+EXCLUDE                = @top_srcdir@/doc/geany-gtkdoc.h \
+                         @top_srcdir@/doc/geany-sciwrappers-gtkdoc.h
 
 # The EXCLUDE_SYMLINKS tag can be used to select whether or not files or
 # directories that are symbolic links (a Unix file system feature) are excluded
