gen-sci-methods.py: add script to generate scintilla_object wrappers
The script parses sciwrappers.c and outputs scintilla_object_* functions
calling the respective sci_* function. The scintilla_object_* ones are going to
be scanned for gobject-introspection and are automatically detected as true
object methods.

configure checks for pycparser accordingly and travis should be fine too.

--- a/.travis.yml
+++ b/.travis.yml
@@ -17,6 +17,7 @@ install:
   # try not to install doxygen-latex because we don't need it and it's huge
   - sudo apt-get install -y --no-install-recommends doxygen
   - sudo apt-get install -y python-lxml
+  - sudo apt-get install -y python-pycparser
 before_script:
   - export CFLAGS="-g -O2 -Werror=pointer-arith -Werror=aggregate-return -Werror=implicit-function-declaration"
 script:
