Windows Installer: declare files to be reserved for faster startup
This tells NSIS to place the necessary libraries at the beginning
of the packed installer so the installer does not need to extract
everything before it can start.

--- a/geany.nsi.in
+++ b/geany.nsi.in
@@ -77,6 +77,12 @@ Var UNINSTDIR
 ;;;;;;;;;;;;;;;;
 !include "MUI2.nsh"
 
+;Reserve files used in .onInit, for faster start-up
+ReserveFile "${NSISDIR}\Plugins\System.dll"
+ReserveFile "${NSISDIR}\Plugins\UserInfo.dll"
+ReserveFile "${NSISDIR}\Plugins\InstallOptions.dll"
+ReserveFile "${NSISDIR}\Plugins\LangDLL.dll"
+
 !define MUI_ABORTWARNING
 !define MUI_ICON "icons\geany.ico"
 !define MUI_UNICON "${NSISDIR}\Contrib\Graphics\Icons\modern-uninstall-full.ico"
