--- a/doc/Doxyfile.in
+++ b/doc/Doxyfile.in
@@ -793,7 +793,8 @@ INPUT                  = @top_srcdir@/src/ \
                          @top_srcdir@/tagmanager/src/tm_source_file.c \
                          @top_srcdir@/tagmanager/src/tm_source_file.h \
                          @top_srcdir@/tagmanager/src/tm_workspace.c \
-                         @top_srcdir@/tagmanager/src/tm_workspace.h
+                         @top_srcdir@/tagmanager/src/tm_workspace.h \
+                         @top_srcdir@/tagmanager/src/tm_parser.h
 
 # This tag can be used to specify the character encoding of the source files
 # that doxygen parses. Internally doxygen uses the UTF-8 encoding. Doxygen uses
