Add an API-like ctags layer
At the moment it is a bit hard to distinguish which of the functions
we are using belong to ctags. To make more explicit what we need
from ctags, wrap all ctags-related code and access ctags only using
this layer.

The interface from tm_ctags_wrappers.h can serve as a base for
proper ctags interface if ctags becomes a library.

--- a/tagmanager/src/Makefile.am
+++ b/tagmanager/src/Makefile.am
@@ -28,4 +28,6 @@ libtagmanager_la_SOURCES =\
 	tm_tag.h \
 	tm_tag.c \
 	tm_workspace.h \
-	tm_workspace.c
+	tm_workspace.c \
+	tm_ctags_wrappers.h \
+	tm_ctags_wrappers.c
