--- a/data/filetype_extensions.conf
+++ b/data/filetype_extensions.conf
@@ -8,6 +8,7 @@ ActionScript=*.as;
 Ada=*.adb;*.ads;
 Asciidoc=*.asciidoc;*.adoc;
 ASM=*.asm;*.asm51;*.a51;
+AutoIt=*.au3;
 Batch=*.bat;*.cmd;*.nt;
 CAML=*.ml;*.mli;
 C=*.c;*.h;*.xpm;
