--- a/geany.nsi.in
+++ b/geany.nsi.in
@@ -138,6 +138,7 @@ Section "!Program Files" SEC01
 	File "${RESOURCEDIR}\data\filetype_extensions.conf"
 	File "${RESOURCEDIR}\data\geany.glade"
 !if ${GTK_VERSION} >= 3
+	File "${RESOURCEDIR}\data\geany-3.20.css"
 	File "${RESOURCEDIR}\data\geany.css"
 !else
 	File "${RESOURCEDIR}\data\geany.gtkrc"
