Make our convenience libraries more self-contained
Make each convenience library depend on the ones it requires, which is
pretty straightforward for us as they each only depend on a single
other one, avoiding any worry about double linking of static objects.

--- a/tagmanager/src/Makefile.am
+++ b/tagmanager/src/Makefile.am
@@ -32,3 +32,5 @@ libtagmanager_la_SOURCES =\
 	tm_workspace.c \
 	tm_ctags_wrappers.h \
 	tm_ctags_wrappers.c
+
+libtagmanager_la_LIBADD = ../ctags/libctags.la $(GTK_LIBS)
